# lilium

./: README.md
autoload/: lilium.vim
autoload/lilium/: complete.vim  config.vim  entities.vim  gh.vim  issues.vim  job.vim  match.vim  pr.vim  prefs.vim  strategy.vim  users.vim
autoload/lilium/strategy/: asana.vim  ch.vim  composite.vim  curl.vim  dummy.vim  gh.vim  hub.vim
autoload/lilium/strategy/asana/: curl.vim
autoload/lilium/strategy/ch/: curl.vim
autoload/lilium/strategy/gh/: curl.vim  hub.vim
autoload/lilium/strategy/gh/hub/: config.vim
autoload/lilium/strategy/hub/: config.vim
autoload/lilium/util/: editor.vim  path.vim
ftplugin/: gitcommit.vim
lsp/: Cargo.toml
lsp/.cargo/: config.toml
lsp/src/: backend.rs  cli.rs  completion.rs  documents.rs  fs.rs  main.rs  progress.rs
lsp/src/adapters/: cached.rs  composite.rs  mod.rs
lsp/src/adapters/asana/: api.rs  mod.rs  model.rs
lsp/src/adapters/github/: cli.rs  mod.rs  model.rs
lua/lilium/: async.lua  browse.lua  command.lua  completer.lua  fs.lua  info.lua  init.lua  lsp.lua  source.lua  window.lua
lua/lilium/completion/: init.lua  params.lua  source.lua
lua/lilium/completion/sources/: asana.lua  composite.lua  dummy.lua  github.lua  prefixed.lua
lua/lilium/http/: curl.lua  init.lua
lua/lilium/lsp/: enhanced_editor.lua
plugin/: lilium.lua  lilium.vim
test/strategy/: ch.vader
