[package]
name = "lsp"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "lilium"
path = "src/main.rs"

[dependencies]
async-trait = "0.1.80"
clap = { version = "4.1.0", features = ["derive"] }
dashmap = "5.5.3"
itertools = "0.13.0"
reqwest = "0.12.4"
ropey = "1.6.1"
serde = "1.0.203"
serde_json = "1.0.117"
tokio = { version = "1.38.0", features = ["full"] }
tower-lsp = "0.20.0"
